<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/calibration_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_rounded_blue"
        android:text="@string/calibration_start_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/calibration_howto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/calibration_howto_text" />

    <Button
        android:id="@+id/calibration_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@color/white"
        android:text="@string/calibration_cancel_text"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/calibration_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calibration_howto"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/calibration_tip_text" />
    
    <TextView
        android:id="@+id/calibration_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calibration_tip"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/calibration_accessmenu_text" />

</RelativeLayout>
